# simple-planning-poker

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .postcssrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.js  .swcrc  Cargo.toml  LICENSE-Notice.txt  LICENSE.txt  README.md  database.rules.json  eslint.config.js  firebase.json  flake.nix  index.html  package.json  playwright.config.ts  plopfile.js  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  stylelint.config.js  tsconfig.build.json  tsconfig.json  tsconfig.test.json  turbo.json  vite.config.js  vitest.config.js  webpack.config.js
src/: app.tsx  (+8 more)
src/rust/planning_poker/: Cargo.toml
src/rust/planning_poker/src/: lib.rs  main.rs
src/rust/planning_poker/src/agents/: domain_event_listener.rs  game_action_reducer.rs  game_observer.rs  game_status.rs  global_bus.rs  global_status.rs  mod.rs  sign_in_action_reducer.rs  sign_in_status.rs  user_action_reducer.rs
src/rust/planning_poker/src/components/: mod.rs
src/rust/planning_poker/src/domains/: base.rs  event.rs  game.rs  game_player.rs  id.rs  invitation.rs  join_service.rs  mod.rs  selectable_cards.rs  story_point.rs  user.rs  user_repository.rs
src/rust/planning_poker/src/infrastructures/: authenticator.rs  card_converter.rs  database.rs  firebase.rs  game_player_repository.rs  game_repository.rs  mod.rs  user_repository.rs
src/rust/planning_poker/src/usecases/: change_user_mode.rs  change_user_name.rs  create_game.rs  hand_card.rs  join_user.rs  leave_from.rs  mod.rs  new_game.rs  show_down.rs
src/rust/planning_poker/src/utils/: mod.rs  types.rs  uuid_factory.rs
src/rust/planning_poker/tests/: mod.rs
(+1167 files in other folders)
