[package]
name = "planning_poker"
version = "0.1.0"
edition = "2021"

[lib]
name = "planning_poker"
path = "src/rust/lib.rs"

[[bin]]
name = "planning-poker"
path = "src/rust/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/" }
gloo = "0.5"
gloo-utils = "0.1.1"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "HtmlCollection",
  "Window",
  "Event",
  "EventTarget"
]
