[package]
name = "planning_poker"
version = "0.1.0"
edition = "2021"

[lib]
name = "planning_poker"
path = "src/lib.rs"

[[bin]]
name = "planning-poker"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/" }
yew-agent = { git = "https://github.com/yewstack/yew/" }
gloo = "0.5"
gloo-utils = "0.1.1"
wasm-bindgen = {version = "0.2", features = [ "serde-serialize" ]}
wasm-bindgen-futures = "0.4"
uuid = {version = "0.8", features = ["v4"]  }
sha256 = "1.0.1"
domain_macro = {path = "../domain_macro"}
async-trait = "0.1"
tokio = {version = "1.15", features = ["macros", "rt"]}
js-sys = "0.3"
serde = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "HtmlCollection",
  "Window",
  "Event",
  "EventTarget",
  "InputEventInit",
  "EventTarget",

]
